nav-link active
Signed-off-by: chinazyq <2054555+chinazyq@user.noreply.gitee.com>

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">社团简介</a>
+                        <a class="nav-link active" href="about.html">社团简介</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="history.html">发展历程</a>
