--- a/history.html
+++ b/history.html
@@ -39,7 +39,7 @@
                         <a class="nav-link" href="about.html">社团简介</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="history.html">发展历程</a>
+                        <a class="nav-link active" href="history.html">发展历程</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="http://ss.zyqs.xyz/VR">活动影像</a>
