--- a/about.html
+++ b/about.html
@@ -58,9 +58,9 @@
     </div>
 
     <footer>
-        <script>
+        <script type="text/javascript">
             var currentYear = new Date().getFullYear();
-            document.write("&copy; " + currentYear + " VR俱乐部. 苏ICP备2023000758号-2");
+            document.write('&copy; ' + currentYear + ' VR俱乐部 <a class="nav-link" href="https://beian.miit.gov.cn/" target="_blank">苏ICP备2023000758号-2</a>');
         </script>
     </footer>
 
