--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="https://mp.weixin.qq.com/mp/appmsgalbum?action=getalbum&__biz=MzIzMDU3NzQ1MQ==&scene=1&album_id=2927847544494440450&count=3#wechat_redirect">使用攻略</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="dh.html">网址导航</a>
+                    </li>
                 </ul>
             </div>
         </div>
