--- a/dh.html
+++ b/dh.html
@@ -86,18 +86,30 @@
         <ul class="link-list">
             <!-- 在这里添加按A-Z分类排序的链接项目 -->
             <li class="link-item"><a href="https://jwc.ecust.edu.cn">J教务处信息网</a></li>
-            <li class="link-item"><a href="http://sccount.ecust.edu.cn">S上网信息统计</a></li>
+            <li class="link-item"><a href="http://account.ecust.edu.cn">S上网信息统计（内网）</a></li>
             <li class="link-item"><a href="https://zhxy.ecust.edu.cn/">Z资环学院</a></li>
             <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/">X校长办公室</a></li>
             <li class="link-item"><a href="https://sslvpn.ecust.edu.cn/">VVPN（WEB）</a></li>
             <li class="link-item"><a href="https://vpn.ecust.edu.cn/">VVPN（教职工）</a></li>
-            <li class="link-item"><a href="http://172.20.17.6/">X校内测速</a></li>
+            <li class="link-item"><a href="http://172.20.17.6/">X校内测速（内网）</a></li>
             <li class="link-item"><a href="https://inquiry.ecust.edu.cn/jsxsd/">Z综合教务管理系统</a></li>
             <li class="link-item"><a href="https://ykt.ecust.edu.cn/">Y一卡通服务平台</a></li>
             <li class="link-item"><a href="https://lib.ecust.edu.cn/">T图书馆</a></li>
-            <li class="link-item"><a href="http://172.20.21.19/">F仿真物理实验</a></li>
-            <li class="link-item"><a href="http://172.20.18.11/">T体育管理综合查询系统V2.0</a></li>
+            <li class="link-item"><a href="http://172.20.21.19/">F仿真物理实验（内网）</a></li>
+            <li class="link-item"><a href="http://172.20.18.11/">T体育管理综合查询系统V2.0（课活查询）（内网）</a></li>
             <li class="link-item"><a href="https://pan.ecust.edu.cn/">H华理云</a></li>
+            <li class="link-item"><a href="https://pay.ecust.edu.cn/">J缴费平台</a></li>
+            <li class="link-item"><a href="https://cwc.ecust.edu.cn/">C财务处</a></li>
+            <li class="link-item"><a href="https://xxb.ecust.edu.cn/wrzbh/list.htm">W微软正版化（Windows、Office)</a></li>
+            <li class="link-item"><a href="https://xxb.ecust.edu.cn/MATLAB_13818/list.htm">MMATLAB</a></li>
+            <li class="link-item"><a href="https://light.ecust.edu.cn/_web/_apps/lightapp/studentSchedule/mobile/permit/app/pub/index.html">K课程表</a></li>
+            <li class="link-item"><a href="https://light.ecust.edu.cn/_web/_apps/lightapp/inquireScores/mobile/permit/wechat/pub/index.html">C成绩单</a></li>
+            <li class="link-item"><a href="https://yx.ecust.edu.cn/">Y迎新系统</a></li>
+            <li class="link-item"><a href="https://hlsc.ecust.edu.cn/">S双创实践管理平台（内网）</a></li>
+            <li class="link-item"><a href="https://hlsc-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/">S双创实践管理平台（SSLVPN）</a></li>
+            <li class="link-item"><a href="https://hlsc-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/">S双创实践管理平台（SSLVPN）</a></li>
+            <li class="link-item"><a href="https://szcg.ecust.edu.cn/wx/">T体测与场馆预约（内网）</a></li>
+            <li class="link-item"><a href="https://szcg-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/wx/">T体测与场馆预约（SSLVPN）</a></li>
         </ul>
     </div>
     <footer>
