--- a/dh.html
+++ b/dh.html
@@ -107,9 +107,11 @@
             <li class="link-item"><a href="https://yx.ecust.edu.cn/">Y迎新系统</a></li>
             <li class="link-item"><a href="https://hlsc.ecust.edu.cn/">S双创实践管理平台（内网）</a></li>
             <li class="link-item"><a href="https://hlsc-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/">S双创实践管理平台（SSLVPN）</a></li>
-            <li class="link-item"><a href="https://hlsc-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/">S双创实践管理平台（SSLVPN）</a></li>
             <li class="link-item"><a href="https://szcg.ecust.edu.cn/wx/">T体测与场馆预约（内网）</a></li>
             <li class="link-item"><a href="https://szcg-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/wx/">T体测与场馆预约（SSLVPN）</a></li>
+            <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10381/list.htm">X校区地图</a></li>
+            <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10383/list.htm">T通讯地址</a></li>
+            <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10380/list.htm">D电话黄页</a></li>
         </ul>
     </div>
     <footer>
