--- a/dh.html
+++ b/dh.html
@@ -92,11 +92,13 @@
             <li class="link-item"><a href="https://sslvpn.ecust.edu.cn/">VVPN（WEB）</a></li>
             <li class="link-item"><a href="https://vpn.ecust.edu.cn/">VVPN（教职工）</a></li>
             <li class="link-item"><a href="http://172.20.17.6/">X校内测速（内网）</a></li>
+            <li class="link-item"><a href="http://172.20.7.152/jsxsd/">Z综合教务管理系统（内网IP）</a></li>
             <li class="link-item"><a href="https://inquiry.ecust.edu.cn/jsxsd/">Z综合教务管理系统</a></li>
             <li class="link-item"><a href="https://ykt.ecust.edu.cn/">Y一卡通服务平台</a></li>
             <li class="link-item"><a href="https://lib.ecust.edu.cn/">T图书馆</a></li>
             <li class="link-item"><a href="http://172.20.21.19/">F仿真物理实验（内网）</a></li>
             <li class="link-item"><a href="http://172.20.18.11/">T体育管理综合查询系统V2.0（课活查询）（内网）</a></li>
+            <li class="link-item"><a href="https://172.20.7.70/">H华理云（内网IP）</a></li>
             <li class="link-item"><a href="https://pan.ecust.edu.cn/">H华理云</a></li>
             <li class="link-item"><a href="https://pay.ecust.edu.cn/">J缴费平台</a></li>
             <li class="link-item"><a href="https://cwc.ecust.edu.cn/">C财务处</a></li>
