--- a/dh.html
+++ b/dh.html
@@ -112,6 +112,8 @@
             <li class="link-item"><a href="https://szcg.ecust.edu.cn/wx/">T体测与场馆预约（内网）</a></li>
             <li class="link-item"><a href="https://szcg-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/wx/">T体测与场馆预约（SSLVPN）</a></li>
             <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10381/list.htm">X校区地图</a></li>
+            <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/_upload/article/images/47/0d/f705cf5e406e849bd5566014e746/4d6f9975-0d72-4074-90fd-33789e805111.jpg">X校区地图（徐汇）</a></li>
+            <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/_upload/article/images/ae/8d/1d8afa564716b51dedcde5174550/71ffa9db-9fe7-43c8-9090-ccd1224169dc.jpg">X校区地图（奉贤）</a></li>
             <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10383/list.htm">T通讯地址</a></li>
             <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10380/list.htm">D电话黄页</a></li>
         </ul>
