--- a/dh.html
+++ b/dh.html
@@ -116,6 +116,11 @@
             <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/_upload/article/images/ae/8d/1d8afa564716b51dedcde5174550/71ffa9db-9fe7-43c8-9090-ccd1224169dc.jpg">X校区地图（奉贤）</a></li>
             <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10383/list.htm">T通讯地址</a></li>
             <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10380/list.htm">D电话黄页</a></li>
+            <li class="link-item"><a href="https://jwc.ecust.edu.cn/pyfa/list.htm">P培养方案</a></li>
+            <li class="link-item"><a href="https://mooc.s.ecust.edu.cn/course/441650000009241.html">L劳育课程（美食与生活）</a></li>
+            <li class="link-item"><a href="https://mooc.s.ecust.edu.cn/course/441650000009383.html">L劳育课程（园艺与生活）</a></li>
+            <li class="link-item"><a href="https://hqfw.ecust.edu.cn/hqecust/service/assets/images/code.jpg">B报修（微信小程序）</a></li>
+            <li class="link-item"><a href="http://mj.wei7135.com/cmsindex.html">M梦境班车（需在微信中打开）</a></li>
         </ul>
     </div>
     <footer>
