--- a/dh.html
+++ b/dh.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>网址导航</title>
     <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/bootstrap/5.2.3/css/bootstrap.min.css">
+    <base target="_blank">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -91,9 +92,9 @@
             <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/">X校长办公室</a></li>
             <li class="link-item"><a href="https://sslvpn.ecust.edu.cn/">VVPN（WEB）</a></li>
             <li class="link-item"><a href="https://vpn.ecust.edu.cn/">VVPN（教职工）</a></li>
-            <li class="link-item"><a href="http://172.20.17.6/">X校内测速（内网）</a></li>
-            <li class="link-item"><a href="http://172.20.7.152/jsxsd/">Z综合教务管理系统（内网IP）</a></li>
-            <li class="link-item"><a href="https://inquiry.ecust.edu.cn/jsxsd/">Z综合教务管理系统</a></li>
+            <li class="link-item"><a href="http://172.20.17.6/">C测速（内网）</a></li>
+            <li class="link-item"><a href="http://172.20.7.152/jsxsd/">J教务管理系统（内网IP）</a></li>
+            <li class="link-item"><a href="https://inquiry.ecust.edu.cn/jsxsd/">J教务管理系统</a></li>
             <li class="link-item"><a href="https://ykt.ecust.edu.cn/">Y一卡通服务平台</a></li>
             <li class="link-item"><a href="https://lib.ecust.edu.cn/">T图书馆</a></li>
             <li class="link-item"><a href="http://172.20.21.19/">F仿真物理实验（内网）</a></li>
@@ -111,9 +112,9 @@
             <li class="link-item"><a href="https://hlsc-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/">S双创实践管理平台（SSLVPN）</a></li>
             <li class="link-item"><a href="https://szcg.ecust.edu.cn/wx/">T体测与场馆预约（内网）</a></li>
             <li class="link-item"><a href="https://szcg-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/wx/">T体测与场馆预约（SSLVPN）</a></li>
-            <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10381/list.htm">X校区地图</a></li>
-            <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/_upload/article/images/47/0d/f705cf5e406e849bd5566014e746/4d6f9975-0d72-4074-90fd-33789e805111.jpg">X校区地图（徐汇）</a></li>
-            <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/_upload/article/images/ae/8d/1d8afa564716b51dedcde5174550/71ffa9db-9fe7-43c8-9090-ccd1224169dc.jpg">X校区地图（奉贤）</a></li>
+            <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10381/list.htm">D地图</a></li>
+            <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/_upload/article/images/47/0d/f705cf5e406e849bd5566014e746/4d6f9975-0d72-4074-90fd-33789e805111.jpg">D地图（徐汇）</a></li>
+            <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/_upload/article/images/ae/8d/1d8afa564716b51dedcde5174550/71ffa9db-9fe7-43c8-9090-ccd1224169dc.jpg">D地图（奉贤）</a></li>
             <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10383/list.htm">T通讯地址</a></li>
             <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10380/list.htm">D电话黄页</a></li>
             <li class="link-item"><a href="https://jwc.ecust.edu.cn/pyfa/list.htm">P培养方案</a></li>
@@ -121,6 +122,13 @@
             <li class="link-item"><a href="https://mooc.s.ecust.edu.cn/course/441650000009383.html">L劳育课程（园艺与生活）</a></li>
             <li class="link-item"><a href="https://hqfw.ecust.edu.cn/hqecust/service/assets/images/code.jpg">B报修（微信小程序）</a></li>
             <li class="link-item"><a href="http://mj.wei7135.com/cmsindex.html">M梦境班车（需在微信中打开）</a></li>
+            <li class="link-item"><a href="https://www.ecust.edu.cn/595/list.htm">X学院列表</a></li>
+            <li class="link-item"><a href="https://xghall.ecust.edu.cn/">X学生工作管理服务平台（学工系统）（内网）</a></li>
+            <li class="link-item"><a href="https://xghall-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/">X学生工作管理服务平台（学工系统）（SSLVPN）</a></li>
+            <li class="link-item"><a href="https://zdgxyplatform.ecust.edu.cn/zdxy/index.action">Z中德合作办学管理交流平台（内网）</a></li>
+            <li class="link-item"><a href="https://zdgxyplatform-ecust-edu-cn.sslvpn.ecust.edu.cn:8118/zdxy/index.action">Z中德合作办学管理交流平台（SSLVPN）</a></li>
+            <li class="link-item"><a href="http://172.18.56.20/student/">D大学物理实验选课</a></li>
+            <li class="link-item"><a href="https://qm.qq.com/cgi-bin/qm/qr?k=dmvL-oq6gfxi5OD8d6vwyinJGn_4U_L-&authKey=pVwvkS+jhX5uReYXRr+5WHxd8DEUmlungWkc4ysQzBxiMkCRkEKB2TOU1WjHo9Mt&noverify=0&personal_qrcode_source=0">VVR俱乐部QQ群</a></li>
         </ul>
     </div>
     <footer>
