--- a/dh.html
+++ b/dh.html
@@ -86,15 +86,17 @@
         <input type="text" id="search-bar" placeholder="搜索网址...">
         <ul class="link-list">
             <!-- 在这里添加按A-Z分类排序的链接项目 -->
-            <li class="link-item"><a href="https://jwc.ecust.edu.cn">J教务处信息网</a></li>
-            <li class="link-item"><a href="http://account.ecust.edu.cn">S上网信息统计（内网）</a></li>
+            <li class="link-item"><a href="https://jwc.ecust.edu.cn/">J教务处信息网</a></li>
+            <li class="link-item"><a href="http://172.20.7.198/">S上网信息统计（内网）</a></li>
             <li class="link-item"><a href="https://zhxy.ecust.edu.cn/">Z资环学院</a></li>
             <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/">X校长办公室</a></li>
+            <li class="link-item"><a href="https://xxb.ecust.edu.cn/7651/list.htm">VVPN使用手册</a></li>
             <li class="link-item"><a href="https://sslvpn.ecust.edu.cn/">VVPN（WEB）</a></li>
+            <li class="link-item"><a href="https://sslvpn.ecust.edu.cn/com/EasyConnectInstaller.exe">VVPN（Windows客户端）</a></li>
+            <li class="link-item"><a href="https://atrustdownload.sangfor.com/support/Software_Download/EasyConnectPhone.apk">VVPN（Android Phone客户端）</a></li>
+            <li class="link-item"><a href="https://atrustdownload.sangfor.com/support/Software_Download/EasyConnectTablet.apk">VVPN（Android Pad客户端）</a></li>
             <li class="link-item"><a href="https://vpn.ecust.edu.cn/">VVPN（教职工）</a></li>
             <li class="link-item"><a href="http://172.20.17.6/">C测速（内网）</a></li>
-            <li class="link-item"><a href="http://172.20.7.152/jsxsd/">J教务管理系统（内网IP）</a></li>
-            <li class="link-item"><a href="https://inquiry.ecust.edu.cn/jsxsd/">J教务管理系统</a></li>
             <li class="link-item"><a href="https://ykt.ecust.edu.cn/">Y一卡通服务平台</a></li>
             <li class="link-item"><a href="https://lib.ecust.edu.cn/">T图书馆</a></li>
             <li class="link-item"><a href="http://172.20.21.19/">F仿真物理实验（内网）</a></li>
@@ -115,7 +117,7 @@
             <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10381/list.htm">D地图</a></li>
             <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/_upload/article/images/47/0d/f705cf5e406e849bd5566014e746/4d6f9975-0d72-4074-90fd-33789e805111.jpg">D地图（徐汇）</a></li>
             <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/_upload/article/images/ae/8d/1d8afa564716b51dedcde5174550/71ffa9db-9fe7-43c8-9090-ccd1224169dc.jpg">D地图（奉贤）</a></li>
-            <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10383/list.htm">T通讯地址</a></li>
+            <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10383/list.htm">D地址</a></li>
             <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10380/list.htm">D电话黄页</a></li>
             <li class="link-item"><a href="https://jwc.ecust.edu.cn/pyfa/list.htm">P培养方案</a></li>
             <li class="link-item"><a href="https://mooc.s.ecust.edu.cn/course/441650000009241.html">L劳育课程（美食与生活）</a></li>
@@ -127,8 +129,11 @@
             <li class="link-item"><a href="https://xghall-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/">X学生工作管理服务平台（学工系统）（SSLVPN）</a></li>
             <li class="link-item"><a href="https://zdgxyplatform.ecust.edu.cn/zdxy/index.action">Z中德合作办学管理交流平台（内网）</a></li>
             <li class="link-item"><a href="https://zdgxyplatform-ecust-edu-cn.sslvpn.ecust.edu.cn:8118/zdxy/index.action">Z中德合作办学管理交流平台（SSLVPN）</a></li>
-            <li class="link-item"><a href="http://172.18.56.20/student/">D大学物理实验选课</a></li>
-            <li class="link-item"><a href="https://qm.qq.com/cgi-bin/qm/qr?k=dmvL-oq6gfxi5OD8d6vwyinJGn_4U_L-&authKey=pVwvkS+jhX5uReYXRr+5WHxd8DEUmlungWkc4ysQzBxiMkCRkEKB2TOU1WjHo9Mt&noverify=0&personal_qrcode_source=0">VVR俱乐部QQ群</a></li>
+            <li class="link-item"><a href="http://172.18.56.20/student/">D大学物理实验选课（内网）</a></li>
+            <li class="link-item"><a href="https://xxb.ecust.edu.cn/2013/0909/c7579a52284/page.htm">S宿舍上网布线方法</a></li>
+            <li class="link-item"><a href="https://xxb.ecust.edu.cn/7314/list.htm">Y邮箱客户端配置</a></li>
+            <li class="link-item"><a href="https://stu.mail.ecust.edu.cn/">Y邮箱登录（学生）</a></li>
+            <li class="link-item"><a href="https://qm.qq.com/cgi-bin/qm/qr?k=dmvL-oq6gfxi5OD8d6vwyinJGn_4U_L-&authKey=pVwvkS+jhX5uReYXRr+5WHxd8DEUmlungWkc4ysQzBxiMkCRkEKB2TOU1WjHo9Mt&noverify=0&personal_qrcode_source=0"># VR俱乐部QQ群</a></li>
         </ul>
     </div>
     <footer>
