--- a/dh.html
+++ b/dh.html
@@ -104,11 +104,13 @@
             <li class="link-item"><a href="https://172.20.7.70/">H华理云（内网IP）</a></li>
             <li class="link-item"><a href="https://pan.ecust.edu.cn/">H华理云</a></li>
             <li class="link-item"><a href="https://pay.ecust.edu.cn/">J缴费平台</a></li>
+            <li class="link-item"><a href="http://172.20.7.152/jsxsd/">J教务管理系统（内网IP）（需在地址栏按回车）</a></li>
+            <li class="link-item"><a href="https://inquiry.ecust.edu.cn/jsxsd/">J教务管理系统（需在地址栏按回车）</a></li>
             <li class="link-item"><a href="https://cwc.ecust.edu.cn/">C财务处</a></li>
             <li class="link-item"><a href="https://xxb.ecust.edu.cn/wrzbh/list.htm">W微软正版化（Windows、Office)</a></li>
             <li class="link-item"><a href="https://xxb.ecust.edu.cn/MATLAB_13818/list.htm">MMATLAB</a></li>
-            <li class="link-item"><a href="https://light.ecust.edu.cn/_web/_apps/lightapp/studentSchedule/mobile/permit/app/pub/index.html">K课程表</a></li>
-            <li class="link-item"><a href="https://light.ecust.edu.cn/_web/_apps/lightapp/inquireScores/mobile/permit/wechat/pub/index.html">C成绩单</a></li>
+            <li class="link-item"><a href="https://light.ecust.edu.cn/_web/_apps/lightapp/studentSchedule/mobile/permit/app/pub/index.html">K课程表（需在地址栏按回车）</a></li>
+            <li class="link-item"><a href="https://light.ecust.edu.cn/_web/_apps/lightapp/inquireScores/mobile/permit/wechat/pub/index.html">C成绩单（需在地址栏按回车）</a></li>
             <li class="link-item"><a href="https://yx.ecust.edu.cn/">Y迎新系统</a></li>
             <li class="link-item"><a href="https://hlsc.ecust.edu.cn/">S双创实践管理平台（内网）</a></li>
             <li class="link-item"><a href="https://hlsc-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/">S双创实践管理平台（SSLVPN）</a></li>
@@ -133,6 +135,7 @@
             <li class="link-item"><a href="https://xxb.ecust.edu.cn/2013/0909/c7579a52284/page.htm">S宿舍上网布线方法</a></li>
             <li class="link-item"><a href="https://xxb.ecust.edu.cn/7314/list.htm">Y邮箱客户端配置</a></li>
             <li class="link-item"><a href="https://stu.mail.ecust.edu.cn/">Y邮箱登录（学生）</a></li>
+            <li class="link-item"><a href="https://s.ecust.edu.cn/">X学习平台（需在地址栏按回车）</a></li>
             <li class="link-item"><a href="https://qm.qq.com/cgi-bin/qm/qr?k=dmvL-oq6gfxi5OD8d6vwyinJGn_4U_L-&authKey=pVwvkS+jhX5uReYXRr+5WHxd8DEUmlungWkc4ysQzBxiMkCRkEKB2TOU1WjHo9Mt&noverify=0&personal_qrcode_source=0"># VR俱乐部QQ群</a></li>
         </ul>
     </div>
