更新成果展示

--- a/cgzs.html
+++ b/cgzs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>社团简介 - VR俱乐部</title>
+    <title>成果展示 - VR俱乐部</title>
     <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/bootstrap/5.2.3/css/bootstrap.min.css">
     <style>
         body {
@@ -15,6 +15,7 @@
 
         .content {
             flex: 1;
+            padding-bottom: 60px; /* 为页脚腾出空间 */
         }
 
         footer {
@@ -35,13 +36,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="about.html">社团简介</a>
+                        <a class="nav-link" href="about.html">社团简介</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="history.html">发展历程</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cgzs.html">成果展示</a>
+                        <a class="nav-link active" href="cgzs.html">成果展示</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="http://ss.zyqs.xyz/VR">活动影像</a>
@@ -58,9 +59,29 @@
     </nav>
 
     <div class="content container py-5">
-        <h2 class="mb-4">社团简介</h2>
-        <p>VR俱乐部致力于为会员提供最佳的虚拟现实体验。我们提供丰富多彩的虚拟场景，让您沉浸在游戏、社交和创造的世界中。</p>
-        <p>不论您是初次体验VR还是资深玩家，我们都有适合您的活动和项目。加入我们，一起探索数字世界的魅力！</p>
+        <h2 class="mb-4">成果展示</h2>
+        <h4 class="mb-4"><a href="https://www.720yun.com/t/c1vksh8lzrm?scene_id=49505715">顾正红纪念馆VR全景</a></h3>
+        <div class="row">
+            <div class="col-md-2 mb-4">
+                <img src="/img/gzh1.png" alt="gzh" class="img-fluid">
+            </div>
+            <div class="col-md-4 mb-4">
+                <img src="/img/gzh2.png" alt="gzh" class="img-fluid">
+            </div>
+            <div class="col-md-4 mb-4">
+                <img src="/img/gzh3.png" alt="gzh" class="img-fluid">
+            </div>
+        </div>
+        <h4 class="mb-4"><a href="https://www.720yun.com/t/b0vksq1bpqw?scene_id=48714823">华理校史馆VR全景</a></h3>
+        <div class="row">
+            <div class="col-md-2 mb-4">
+                <img src="/img/xsg1.png" alt="xsg" class="img-fluid">
+            </div>
+            <div class="col-md-4 mb-4">
+                <img src="/img/xsg2.png" alt="xsg" class="img-fluid">
+            </div>
+        </div>
+        
     </div>
 
     <footer>
