--- a/history.html
+++ b/history.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,6 +42,9 @@
                         <a class="nav-link active" href="history.html">发展历程</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="cgzs.html">成果展示</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="http://ss.zyqs.xyz/VR">活动影像</a>
                     </li>
                     <li class="nav-item">
@@ -57,10 +60,34 @@
 
     <div class="content container py-5">
         <h2 class="mb-4">发展历程</h2>
-        <p>VR俱乐部成立于XXXX年，从一开始的小团体逐渐发展壮大。经过多年的努力和探索，我们在虚拟现实领域取得了丰富的经验。</p>
+        <p>VR俱乐部成立于2016年，从一开始的大学生创新创业团队逐渐发展壮大。经过多年的努力和探索，我们在虚拟现实领域取得了丰富的经验。</p>
         <p>通过不断创新和合作，我们为会员带来了许多难忘的体验，为VR技术的发展做出了积极贡献。</p>
+        <h3 class="mb-4">2019</h3>
+        <p>虚拟之光大创项目、大创校级立项、第五届“互联网+”获得校级二等奖、“知行杯”上海市学生社会实践项目大赛特等奖</p>
+        <p>个人奖项
+        蔡裕：第二届“千年松溪百年蔗”旅游文化产品大赛三等奖
+        杨卓：第十二届上海市大学生计算机应用能力大赛Web网站设计三等奖、中国高校计算机大赛微信小程序应用开发赛华东赛区三等奖</p>
+        <h3 class="mb-4">2020</h3>
+        <p>VR正当红——红色教育云平台、“虚拟之光”大创升级成为国家级项目、第六届“互联网+”比赛获得市赛铜奖、第十二届"挑战杯"创业计划竞赛校内选拔赛决赛金奖、VR正当红团队：全国百强优秀暑期社会实践团队、墨承AR文创平台、“校园文化”项目大创校级立项、第十二届"挑战杯"创业计划竞赛校内选拔赛决赛银奖</p>
+        <h3 class="mb-4">2021</h3>
+        <p>
+            在2021年华理录取通知书中首次增加了增强现实展示方式，使新生可以通过录取通知书提前了解学校，融入校园文化生活，增强对母校的归属感和文化自豪感。<br>
+            参加第七届中国“互联网+”大学生创新创业大赛，获得校级三等奖。<br>
+            参加2021年中国高校计算机微信小程序应用开发赛、第六届“汇创青春”国际赛新媒体艺术分赛和第七届华东理工大学“优秀校园文化创新发展培育项目”。<br>
+            获得2021年中国高校计算机微信小程序应用开发赛-华东赛区三等奖。<br>
+            成功开发与上线AR集智微信小程序并在今年7月份，本项目将纸质版的AR录取通知书随华东理工大学录取通知书发放至每一位新生手中。<br>
+            在首届沉浸式剧本杀场景创作大赛中获得人气奖第一、二名及最佳设计创意奖。<br>
+        </p>
+        <h3 class="mb-4">2022</h3>
+        <p>
+            纳新的社团成员积极参与社团组织的软件培训，学习并使用新软件进行创新活动，取得了不错的进步，为社团后面的发展奠定基础。<br>
+            2022年的大创项目“情绪科普剧本游戏项目”立足于通过创作能够科学帮助大学生建设更加健康的心态，设计开发了一套包含具有一定心理教育辅导功效的剧本在内的“情绪科普剧本游戏”产品，为大学学生群体的心理健康需求提供更加优质的服务，在本校图书馆已展开了多次剧本游戏体验测试，多数参与测试的同学认为该剧本内容对自己有一定的帮助。<br>
+        </p>
+        <h3 class="mb-4">2023</h3>
+        <p>
+            更新PICO4设备
+        </p>
     </div>
-
     <footer>
         <script type="text/javascript">
             var currentYear = new Date().getFullYear();
