--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                         <a class="nav-link" href="history.html">发展历程</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="cgzs.html">成果展示</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="http://ss.zyqs.xyz/VR">活动影像</a>
                     </li>
                     <li class="nav-item">
