--- a/dh.html
+++ b/dh.html
@@ -106,6 +106,7 @@
             <li class="link-item"><a href="http://172.20.18.11/">T体育管理综合查询系统V2.0（课活查询）（内网）</a></li>
             <li class="link-item"><a href="https://172.20.7.70/">H华理云（内网IP）</a></li>
             <li class="link-item"><a href="https://pan.ecust.edu.cn/">H华理云</a></li>
+            <li class="link-item"><a href="http://124.220.205.119/down.html">H华理健康APP（课活）</a></li>
             <li class="link-item"><a href="https://pay.ecust.edu.cn/">J缴费平台</a></li>
             <li class="link-item"><a href="http://172.20.7.152/jsxsd/">J教务管理系统（内网IP）（需在地址栏按回车）</a></li>
             <li class="link-item"><a href="https://inquiry.ecust.edu.cn/jsxsd/">J教务管理系统（需在地址栏按回车）</a></li>
@@ -120,8 +121,8 @@
             <li class="link-item"><a href="https://szcg.ecust.edu.cn/wx/">T体测与场馆预约（内网）</a></li>
             <li class="link-item"><a href="https://szcg-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/wx/">T体测与场馆预约（SSLVPN）</a></li>
             <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10381/list.htm">D地图</a></li>
-            <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/_upload/article/images/47/0d/f705cf5e406e849bd5566014e746/4d6f9975-0d72-4074-90fd-33789e805111.jpg">D地图（徐汇）</a></li>
-            <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/_upload/article/images/ae/8d/1d8afa564716b51dedcde5174550/71ffa9db-9fe7-43c8-9090-ccd1224169dc.jpg">D地图（奉贤）</a></li>
+            <li class="link-item"><a href="http://ecustcx.zyqs.xyz/xh.jpg">D地图（徐汇）</a></li>
+            <li class="link-item"><a href="http://ecustcx.zyqs.xyz/fx.jpg">D地图（奉贤）</a></li>
             <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10383/list.htm">D地址</a></li>
             <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10380/list.htm">D电话黄页</a></li>
             <li class="link-item"><a href="https://jwc.ecust.edu.cn/pyfa/list.htm">P培养方案</a></li>
