增加实验教学平台导航
Signed-off-by: chinazyq <2054555+chinazyq@user.noreply.gitee.com>

--- a/dh.html
+++ b/dh.html
@@ -94,6 +94,7 @@
             <li class="link-item"><a href="/file/Fake%20Location.apk">FFake Location.apk</a></li>
             <li class="link-item"><a href="https://jwc.ecust.edu.cn/">J教务处信息网</a></li>
             <li class="link-item"><a href="http://172.20.7.198/">S上网信息统计（内网）</a></li>
+            <li class="link-item"><a href="https://ce-ecust.chemzoo.com">S实验教学平台</a></li>
             <li class="link-item"><a href="https://zhxy.ecust.edu.cn/">Z资源与环境工程学院（资环学院）</a></li>
             <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/">X校长办公室</a></li>
             <li class="link-item"><a href="https://www.720yun.com/t/13vk6e877qq">VVR校园</a></li>
