--- a/dh.html
+++ b/dh.html
@@ -91,7 +91,7 @@
         <ul class="link-list">
             <!-- 在这里添加按A-Z分类排序的链接项目 -->
             <li class="link-item"><a href="https://alist.xn--rhqr3ykwbm05aegjqxb.com/cos">AAlist资料站</a></li>
-            <li class="link-item"><a href="/file/Fake%20Location.apk">FFake Location.apk</a></li>
+            <li class="link-item"><a href="https://cs.e.ecust.edu.cn/download/7ad0c1a96458db8dd0763dbd85fb4e0d">FFake Location.apk</a></li>
             <li class="link-item"><a href="https://jwc.ecust.edu.cn/">J教务处信息网</a></li>
             <li class="link-item"><a href="http://172.20.7.198/">S上网信息统计（内网）</a></li>
             <li class="link-item"><a href="https://ce-ecust.chemzoo.com">S实验教学平台</a></li>
