--- a/dh.html
+++ b/dh.html
@@ -153,6 +153,7 @@
             <li class="link-item"><a href="https://www.pgyer.com/xlist">XXlist（APP）</a></li>
             <li class="link-item"><a href="https://mooc1.chaoxing.com/ueditorupload/read?objectId=fde096b9a816efe3d2a2f6393181eda6"># 新生上网手册——智慧校园一本通.pdf</a></li>
             <li class="link-item"><a href="https://ss.zyqs.xyz/"># Sharespace资料站</a></li>
+            <li class="link-item"><a href="/vpn.html"># 华理VPN链接转换工具</a></li>
             <li class="link-item"><a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=6RJx4nG0qXqKijn_MQbCIXgjaOM9Y7Ri&authKey=vd28pa2T16MF18HB76xGQKO8KD5ty%2FCt8CYRvbLpaBKOU%2FsK4ko2iSc2xIcTI41D&noverify=0&group_code=748846912"># VR俱乐部QQ群</a></li>
         </ul>
     </div>
