--- a/dh.html
+++ b/dh.html
@@ -126,6 +126,8 @@
             <li class="link-item"><a href="https://hlsc-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/">S双创实践管理平台（SSLVPN）</a></li>
             <li class="link-item"><a href="https://szcg.ecust.edu.cn/wx/">T体测与场馆预约（内网）</a></li>
             <li class="link-item"><a href="https://szcg-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/wx/">T体测与场馆预约（SSLVPN）</a></li>
+            <li class="link-item"><a href="https://tzcs.ecust.edu.cn/user/student-login">T体测成绩查询（内网）</a></li>
+            <li class="link-item"><a href="https://tzcs-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/user/student-login">T体测成绩查询（SSLVPN）</a></li>
             <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10381/list.htm">D地图</a></li>
             <li class="link-item"><a href="/img/xh.jpg">D地图（徐汇）</a></li>
             <li class="link-item"><a href="/img/fx.jpg">D地图（奉贤）</a></li>
