update dh.html. 增加常见问题
Signed-off-by: chinazyq <2054555+chinazyq@user.noreply.gitee.com>

--- a/dh.html
+++ b/dh.html
@@ -153,7 +153,8 @@
             <li class="link-item"><a href="https://stu.mail.ecust.edu.cn/">Y邮箱登录（学生）</a></li>
             <li class="link-item"><a href="https://s.ecust.edu.cn/">X学习平台（需在地址栏按回车）</a></li>
             <li class="link-item"><a href="https://www.pgyer.com/xlist">XXlist（APP）</a></li>
-            <li class="link-item"><a href="https://xxb.ecust.edu.cn/7576/list.htm"># 信息办新生服务</a></li>
+            <li class="link-item"><a href="https://xxb.ecust.edu.cn/cjwt/list.htm"># 信息办·常见问题</a></li>
+            <li class="link-item"><a href="https://xxb.ecust.edu.cn/7576/list.htm"># 信息办·新生服务</a></li>
             <li class="link-item"><a href="https://ss.zyqs.xyz/"># Sharespace资料站</a></li>
             <li class="link-item"><a href="/vpn.html"># 华理VPN链接转换工具</a></li>
             <li class="link-item"><a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=6RJx4nG0qXqKijn_MQbCIXgjaOM9Y7Ri&authKey=vd28pa2T16MF18HB76xGQKO8KD5ty%2FCt8CYRvbLpaBKOU%2FsK4ko2iSc2xIcTI41D&noverify=0&group_code=748846912"># VR俱乐部QQ群</a></li>
