--- a/dh.html
+++ b/dh.html
@@ -90,7 +90,7 @@
         <input type="text" id="search-bar" placeholder="搜索网址...">
         <ul class="link-list">
             <!-- 在这里添加按A-Z分类排序的链接项目 -->
-            <li class="link-item"><a href="https://alist.xn--rhqr3ykwbm05aegjqxb.com/cos">AAlist资料站</a></li>
+            <li class="link-item"><a href="https://alist.xn--rhqr3ykwbm05aegjqxb.com/">AAlist资料站</a></li>
             <li class="link-item"><a href="https://cs.e.ecust.edu.cn/download/7ad0c1a96458db8dd0763dbd85fb4e0d">FFake Location.apk</a></li>
             <li class="link-item"><a href="https://jwc.ecust.edu.cn/">J教务处信息网</a></li>
             <li class="link-item"><a href="http://172.20.7.198/">S上网信息统计（内网）</a></li>
