--- a/dh.html
+++ b/dh.html
@@ -155,7 +155,7 @@
             <li class="link-item"><a href="https://www.pgyer.com/xlist">XXlist（APP）</a></li>
             <li class="link-item"><a href="https://xxb.ecust.edu.cn/cjwt/list.htm"># 信息办·常见问题</a></li>
             <li class="link-item"><a href="https://xxb.ecust.edu.cn/7576/list.htm"># 信息办·新生服务</a></li>
-            <li class="link-item"><a href="https://ss.zyqs.xyz/"># Sharespace资料站</a></li>
+            <li class="link-item"><a href="http://ss.zyqs.xyz/"># Sharespace资料站</a></li>
             <li class="link-item"><a href="/vpn.html"># 华理VPN链接转换工具</a></li>
             <li class="link-item"><a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=6RJx4nG0qXqKijn_MQbCIXgjaOM9Y7Ri&authKey=vd28pa2T16MF18HB76xGQKO8KD5ty%2FCt8CYRvbLpaBKOU%2FsK4ko2iSc2xIcTI41D&noverify=0&group_code=748846912"># VR俱乐部QQ群</a></li>
         </ul>
@@ -163,7 +163,7 @@
     <footer>
         <script type="text/javascript">
             var currentYear = new Date().getFullYear();
-            document.write('&copy; ' + currentYear + ' VR俱乐部 <a class="nav-link" href="https://beian.miit.gov.cn/" target="_blank">苏ICP备2023000758号-2</a> <a class="nav-link" target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=31012102000135" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="http://www.beian.gov.cn/img/ghs.png" style="float:left;"/>沪公网安备31012102000135号</p></a>');
+            document.write('&copy; ' + currentYear + ' VR俱乐部 <a class="nav-link" href="https://beian.miit.gov.cn/" target="_blank">苏ICP备2023000758号-2</a> <a class="nav-link" target="_blank" href="https://www.beian.gov.cn/portal/registerSystemInfo?recordcode=31012102000135" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="https://www.beian.gov.cn/img/ghs.png" style="float:left;"/>沪公网安备31012102000135号</p></a>');
         </script>
     </footer>
     <script>
