update dh.html. 增加内网GPT
Signed-off-by: chinazyq <2054555+chinazyq@user.noreply.gitee.com>

--- a/dh.html
+++ b/dh.html
@@ -110,6 +110,8 @@
             <li class="link-item"><a href="https://lib.ecust.edu.cn/">T图书馆</a></li>
             <li class="link-item"><a href="http://172.20.21.19/">F仿真物理实验（内网）</a></li>
             <li class="link-item"><a href="http://172.20.18.11/">T体育管理综合查询系统V2.0（课活查询）（内网）</a></li>
+            <li class="link-item"><a href="https://gpt.ecust.cloud/">GGPT（内网）</a></li>
+            <li class="link-item"><a href="https://gpt-ecust-cloud-s.sslvpn.ecust.edu.cn:8118/">GGPT（SSLVPN）</a></li>
             <li class="link-item"><a href="https://172.20.7.70/">H华理云（内网IP）</a></li>
             <li class="link-item"><a href="https://pan.ecust.edu.cn/">H华理云</a></li>
             <li class="link-item"><a href="http://124.220.205.119/down.html">H华理健康APP（课活）</a></li>
