--- a/dh.html
+++ b/dh.html
@@ -153,7 +153,7 @@
             <li class="link-item"><a href="https://xxb.ecust.edu.cn/2013/0909/c7579a52284/page.htm">S宿舍上网布线方法</a></li>
             <li class="link-item"><a href="https://xxb.ecust.edu.cn/7314/list.htm">Y邮箱客户端配置</a></li>
             <li class="link-item"><a href="https://stu.mail.ecust.edu.cn/">Y邮箱登录（学生）</a></li>
-            <li class="link-item"><a href="https://s.ecust.edu.cn/">X学习平台（需在地址栏按回车）</a></li>
+            <li class="link-item"><a href="https://s.ecust.edu.cn/portal/">X学习平台老版本（需在地址栏按回车）</a></li>
             <li class="link-item"><a href="https://www.pgyer.com/xlist">XXlist（APP）</a></li>
             <li class="link-item"><a href="https://xxb.ecust.edu.cn/cjwt/list.htm"># 信息办·常见问题</a></li>
             <li class="link-item"><a href="https://xxb.ecust.edu.cn/7576/list.htm"># 信息办·新生服务</a></li>
