--- a/dh.html
+++ b/dh.html
@@ -110,8 +110,6 @@
             <li class="link-item"><a href="https://lib.ecust.edu.cn/">T图书馆</a></li>
             <li class="link-item"><a href="http://172.20.21.19/">F仿真物理实验（内网）</a></li>
             <li class="link-item"><a href="http://172.20.18.11/">T体育管理综合查询系统V2.0（课活查询）（内网）</a></li>
-            <li class="link-item"><a href="https://gpt.ecust.cloud/">GGPT（内网）</a></li>
-            <li class="link-item"><a href="https://gpt-ecust-cloud-s.sslvpn.ecust.edu.cn:8118/">GGPT（SSLVPN）</a></li>
             <li class="link-item"><a href="https://172.20.7.70/">H华理云（内网IP）</a></li>
             <li class="link-item"><a href="https://pan.ecust.edu.cn/">H华理云</a></li>
             <li class="link-item"><a href="http://124.220.205.119/down.html">H华理健康APP（课活）</a></li>
@@ -141,6 +139,7 @@
             <li class="link-item"><a href="https://mooc.s.ecust.edu.cn/course/441650000009241.html">L劳育课程（美食与生活）</a></li>
             <li class="link-item"><a href="https://mooc.s.ecust.edu.cn/course/441650000009383.html">L劳育课程（园艺与生活）</a></li>
             <li class="link-item"><a href="https://hqfw.ecust.edu.cn/hqecust/service/assets/images/code.jpg">B报修（微信小程序）</a></li>
+            <li class="link-item"><a href="http://mc.ecustvr.top/">MMC Server（我的世界服务器）</a></li>
             <li class="link-item"><a href="http://mj.wei7135.com/cmsindex.html">M梦境班车（需在微信中打开）</a></li>
             <li class="link-item"><a href="https://www.ecust.edu.cn/595/list.htm">X学院列表</a></li>
             <li class="link-item"><a href="https://docs.qq.com/doc/DR1ppeld4eWVVblNH">X选课指南（大一）</a></li>
