--- a/dh.html
+++ b/dh.html
@@ -134,7 +134,8 @@
             <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10383/list.htm">D地址</a></li>
             <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10380/list.htm">D电话黄页</a></li>
             <li class="link-item"><a href="https://jwc.ecust.edu.cn/pyfa/list.htm">P培养方案</a></li>
-            <li class="link-item"><a href="https://ecustpt.eu.org/">PPT站（ECUSTPT花梨月下）</a></li>
+            <li class="link-item"><a href="https://ecustpt.eu.org/">PPT站（ECUSTPT花梨月下）（内网）</a></li>
+            <li class="link-item"><a href="https://ecustpt.eu.org/">PPT站（ECUSTPT花梨月下）（公网）</a></li>
             <li class="link-item"><a href="https://ecustpt-eu-org.sslvpn.ecust.edu.cn:8118/">PPT站（ECUSTPT花梨月下）（SSLVPN）</a></li>
             <li class="link-item"><a href="https://mooc.s.ecust.edu.cn/course/441650000009241.html">L劳育课程（美食与生活）</a></li>
             <li class="link-item"><a href="https://mooc.s.ecust.edu.cn/course/441650000009383.html">L劳育课程（园艺与生活）</a></li>
