--- a/dh.html
+++ b/dh.html
@@ -81,6 +81,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="dh.html">网址导航</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://wiki.ecustvr.top/">Wiki</a>
+                    </li>
                 </ul>
             </div>
         </div>
