--- a/vpn.html
+++ b/vpn.html
@@ -106,6 +106,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="dh.html">网址导航</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://wiki.ecustvr.top/">Wiki</a>
+                    </li>
                 </ul>
             </div>
         </div>
