--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
 
         footer {
-            background-color: #343a40;
+            background-color: #b81414;
             color: #fff;
             text-align: center;
             padding: 15px 0;
@@ -34,7 +34,7 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #b81414;">
         <div class="container">
             <a class="navbar-brand" href="/">VR俱乐部</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -81,10 +81,10 @@
         <!-- 轮播图片 -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-            <a target="_blank" href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=TLNRHzrVbMK2TJbxOkNhCfyWCAD2BMhJ&authKey=btUpthAjvZT4%2BcsL9%2FqKWP7aCYWQ75oluC9sX0PZ%2BZo9%2BTWYBO6LajKWOYRV0DUg&noverify=0&group_code=922527299"><img decoding="async" src="img/cover1.png" class="d-block" style="width:100%"></a>
+            <a target="_blank" href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=TLNRHzrVbMK2TJbxOkNhCfyWCAD2BMhJ&authKey=btUpthAjvZT4%2BcsL9%2FqKWP7aCYWQ75oluC9sX0PZ%2BZo9%2BTWYBO6LajKWOYRV0DUg&noverify=0&group_code=922527299"><img decoding="async" src="img/covers.png" class="d-block" style="width:100%"></a>
             </div>
             <div class="carousel-item">
-            <a target="_blank" href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=TLNRHzrVbMK2TJbxOkNhCfyWCAD2BMhJ&authKey=btUpthAjvZT4%2BcsL9%2FqKWP7aCYWQ75oluC9sX0PZ%2BZo9%2BTWYBO6LajKWOYRV0DUg&noverify=0&group_code=922527299"><img decoding="async" src="img/cover2.png" class="d-block" style="width:100%"></a>
+            <a target="_blank" href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=TLNRHzrVbMK2TJbxOkNhCfyWCAD2BMhJ&authKey=btUpthAjvZT4%2BcsL9%2FqKWP7aCYWQ75oluC9sX0PZ%2BZo9%2BTWYBO6LajKWOYRV0DUg&noverify=0&group_code=922527299"><img decoding="async" src="img/cover1.png" class="d-block" style="width:100%"></a>
             </div>
             <div class="carousel-item">
             <a target="_blank" href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=TLNRHzrVbMK2TJbxOkNhCfyWCAD2BMhJ&authKey=btUpthAjvZT4%2BcsL9%2FqKWP7aCYWQ75oluC9sX0PZ%2BZo9%2BTWYBO6LajKWOYRV0DUg&noverify=0&group_code=922527299"><img decoding="async" src="img/cover3.png" class="d-block" style="width:100%"></a>
