--- a/cgzs.html
+++ b/cgzs.html
@@ -19,7 +19,7 @@
         }
 
         footer {
-            background-color: #343a40;
+            background-color: #b81414;
             color: #fff;
             text-align: center;
             padding: 15px 0;
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #b81414;">
         <div class="container">
             <a class="navbar-brand" href="/">VR俱乐部</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
