--- a/dh.html
+++ b/dh.html
@@ -46,16 +46,15 @@
             width: 100%;
         }
         footer {
-            background-color: #343a40;
+            background-color: #b81414;
             color: #fff;
             text-align: center;
             padding: 15px 0;
-            position: relative;
         }
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #b81414;">
         <div class="container">
             <a class="navbar-brand" href="/">VR俱乐部</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
