添加信息门户

--- a/dh.html
+++ b/dh.html
@@ -144,6 +144,7 @@
             <li class="link-item"><a href="https://hqfw.ecust.edu.cn/hqecust/service/assets/images/code.jpg">B报修（微信小程序）</a></li>
             <li class="link-item"><a href="http://mc.ecustvr.top/">MMC Server（我的世界服务器）</a></li>
             <li class="link-item"><a href="http://mj.wei7135.com/cmsindex.html">M梦境班车（需在微信中打开）</a></li>
+            <li class="link-item"><a href="https://i.ecust.edu.cn/">X信息门户</a></li>
             <li class="link-item"><a href="https://www.ecust.edu.cn/595/list.htm">X学院列表</a></li>
             <li class="link-item"><a href="https://docs.qq.com/doc/DR1ppeld4eWVVblNH">X选课指南（大一）</a></li>
             <li class="link-item"><a href="https://docs.qq.com/doc/DWE9sd2VLREV3S1F4">X选课指南（大二）</a></li>
